--- a/app/editUser/editUser.html
+++ b/app/editUser/editUser.html
@@ -1,34 +1,34 @@
 <div class="container">
     <form class="form-horizontal" role="form">
-        <h2>{{title}}</h2>
+        <h2>New Student</h2>
         <div class="form-group">
             <label for="firstName" class="col-sm-3 control-label">First Name</label>
             <div class="col-sm-9">
-                <input type="text" name="firstName" id="firstName" placeholder="First Name" class="form-control" ng-model="newUser.firstName" ng-value="usrFirstName"  required autofocus>
+                <input type="text" id="firstName" placeholder="First Name" class="form-control" ng-model="newUser.firstName" autofocus>
             </div>
         </div>
         <div class="form-group">
             <label for="lastName" class="col-sm-3 control-label">Last Name</label>
             <div class="col-sm-9">
-                <input type="text" id="lastName" placeholder="Last Name" class="form-control" ng-model="newUser.lastName" ng-value="usrLastName">
+                <input type="text" id="lastName" placeholder="Last Name" class="form-control" ng-model="newUser.lastName">
             </div>
         </div>
         <div class="form-group">
             <label for="phone" class="col-sm-3 control-label">Phone Number</label>
             <div class="col-sm-9">
-                <input type="text" id="phone" placeholder="Phone number" class="form-control" ng-model="newUser.phone"  ng-value="usrPhone">
+                <input type="text" id="phone" placeholder="Phone number" class="form-control" ng-model="newUser.phone">
             </div>
         </div>
         <div class="form-group">
             <label for="city" class="col-sm-3 control-label">City</label>
             <div class="col-sm-9">
-                <input type="text" id="city" placeholder="City" class="form-control" ng-model="newUser.city" ng-value="usrCity">
+                <input type="text" id="city" placeholder="City" class="form-control" ng-model="newUser.city">
             </div>
         </div>
         <div class="form-group">
             <label for="email" class="col-sm-3 control-label">Email</label>
             <div class="col-sm-9">
-                <input type="email" id="email" placeholder="Email" class="form-control" ng-model="newUser.email" ng-value="usrEmail"">
+                <input type="email" id="email" placeholder="Email" class="form-control" ng-model="newUser.email">
             </div>
         </div>
         <div class="form-group">
@@ -52,7 +52,7 @@
                     <button type="reset" class="btn btn-primary btn-block" ng-click="cancel()">Cancel</button>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                    <input type="submit" class="btn btn-primary btn-block" ng-click="saveUser()" value="{{buttonName}}" ></button>
+                    <button type="submit" class="btn btn-primary btn-block" ng-click="saveUser()">Update User</button>
                 </div>
             </div>
         </div>
