--- a/app/login/login.html
+++ b/app/login/login.html
@@ -11,7 +11,7 @@
         <form action="" method="POST" class="form-horizontal" role="form">
             <div class="form-group">
                 <label for="email" class="col-sm-2">Email:</label>
-                <input type="email" name="email" id="email" class="form-control col-sm-10" value="" required="required" ng-model="email">
+                <input type="email" name="email" id="email" class="form-control col-sm-10" value="" required="required" ng-model="email" autofocus>
             </div>
             <div class="form-group">
                 <label for="password" class="col-sm-2">Password:</label>
