--- a/app/studentList/studentList.html
+++ b/app/studentList/studentList.html
@@ -1,8 +1,7 @@
 <div>
-    <h5 style="text-align:center;"><a type="button" class="btn btn-default" href="#!/newStudent">New Student</a></h5>
+    <h5 class="col-md-6 col-md-offset-1"><a type="button" class="btn btn-default" href="#!/newStudent">New Student</a></h5>
 </div>
-<div>
-    <!--class="row col-md-9 col-md-offset-3 custyle"-->
+<div class="col-md-10 custyle" >
     <table class="table table-striped custab">
         <thead>
             <tr>
