--- a/app/teacherGallery/teacherGallery.html
+++ b/app/teacherGallery/teacherGallery.html
@@ -14,7 +14,7 @@
 </div>
 
 
-<div class="sessionDetails col-sm-4 ng-show" id="sessionDetails">
+<div class="sessionDetails col-sm-2 ng-show" id="sessionDetails">
     <!-- buttons -->
     <h3>Hello {{greetingUser}}</h3>
     <!-- session details pannel -->
@@ -39,16 +39,15 @@
     </div>
 </div>
 <div class="col-sm-4">
-    <div>
-        <!--class="row col-md-9 col-md-offset-3 custyle"-->
-        Students
-        <ul>
+    <div >
+        <h4 class="col-md-12 col-md-offset-1">Students</h4>
+        <ul class="col-md-12 custyle">
           <li id = "usList" ng-repeat="user in userList"
             class="list-group-item  sessionItem">
             {{user.firstName}} {{user.lastName}}
-                <a class='btn btn-info btn-xs btn-teacher' ng-click="addUser(user)"><span class="glyphicon glyphicon-plus"></span> Add</a> 
-                <a class='btn btn-info btn-xs btn-teacher' ng-click="removeUser(user)"><span class="glyphicon glyphicon-remove"></span> Remove</a> 
-                <a class='btn btn-info btn-xs btn-teacher' ng-click="addToRegistered(user)"><span class="glyphicon glyphicon-ok"></span> Register</a>
+                <a class='btn btn-info btn-xs btn-teacher btn-teacher-add' ng-click="addUser(user)"><span class="glyphicon glyphicon-plus"></span> Add</a> 
+                <a class='btn btn-info btn-xs btn-teacher btn-teacher-remove' ng-click="removeUser(user)"><span class="glyphicon glyphicon-remove"></span> Remove</a> 
+                <a class='btn btn-info btn-xs btn-teacher btn-teacher-register' ng-click="addToRegistered(user)"><span class="glyphicon glyphicon-ok"></span> Register</a>
             </li>
         </ul>
     </div>
