--- a/app/studentList/studentList.html
+++ b/app/studentList/studentList.html
@@ -19,7 +19,7 @@
             <td>{{user.lastName}}</td>
             <td>{{user.phone}}</td>
             <td>{{user.email}}</td>
-            <td class="text-center"><a class='btn btn-info btn-xs' href="#!/newStudent/{{user.firstName}}/{{user.lastName}}/{{user.phone}}/{{user.city}}/{{user.email}}"><span class="glyphicon glyphicon-edit"></span> Edit</a> <a href="#!/studentList" class="btn btn-danger btn-xs" ng-click="removeUser(user)"><span class="glyphicon glyphicon-remove"></span> Del</a></td>
+            <td class="text-center"><a class='btn btn-info btn-xs' href="#!/newStudent/{{user.firstName}}/{{user.lastName}}/{{user.phone}}/{{user.city}}/{{user.email}}"><span class="glyphicon glyphicon-edit"></span></a> <a href="#!/studentList" class="btn btn-danger btn-xs" ng-click="removeUser(user)"><span class="glyphicon glyphicon-trash"></span></a></td>
         </tr>
     </table>
 </div>
