--- a/app/gallery/gallery.html
+++ b/app/gallery/gallery.html
@@ -1,55 +1,55 @@
 <!-- filter buttons -->
 <div class="btn-group col-sm-12">
-    <button class="btn btn-primary" ng-click=filterCourses("all") center-block>All</button>
-    <button class="btn btn-primary" ng-click=filterCourses("my") center-block>My Courses</button>
-    <button class="btn btn-primary" ng-click=filterCourses("other") center-block>Other Courses</button>
+    <button class="btn btn-primary" ng-click="filterCourses('all')" center-block>All</button>
+    <button class="btn btn-primary" ng-click="filterCourses('my')" center-block>My Courses</button>
+    <button class="btn btn-primary" ng-click="filterCourses('other')" center-block>Other Courses</button>
 </div>
 
 <!-- courses menu -->
 
 <div class="attendance-galery col-sm-3">
-  <uib-accordion close-others="true">
-    <div class="courseItem"  ng-repeat="course in courses">
-        <button type="button" class="btn btn-default"  ng-click="courseClick(course)" ng-class="{'disabled':course.isDisabled}"  id="'course'+{{course.id}}">
+    <uib-accordion close-others="true">
+        <div class="courseItem" ng-repeat="course in courses">
+            <button type="button" class="btn btn-default" ng-click="courseClick(course)" ng-class="{'disabled':course.isDisabled}" id="'course'+{{course.id}}">
            <img ng-src="{{course.courseUrl}}" class="img-circle course-image" />
             {{course.name}}</button>
-         <ul class="list-group"  uib-collapse="course.isCollapsed">
-            <li class="list-group-item sessionItem"ng-repeat="session in course.sessionsData" ng-click="selectSession(session)"> {{session.start.getUTCDate()}} {{session.month}}</li>
-        </ul>
-    </div>
-  </uib-accordion>
+            <ul class="list-group" uib-collapse="course.isCollapsed">
+                <li class="list-group-item sessionItem" ng-repeat="session in course.sessionsData" ng-click="selectSession(session)"> {{session.start.getUTCDate()}} {{session.month}}</li>
+            </ul>
+        </div>
+    </uib-accordion>
 </div>
 
 
 <div class="sessionDetails col-sm-4 ng-show" id="sessionDetails">
-<!-- buttons -->
-<h3>Hello {{greetingUser}}</h3>
+    <!-- buttons -->
+    <h3>Hello {{greetingUser}}</h3>
 
-<div class="sessionDetailsItem col-sm-12">
-    <h4>
-        <div class="col-sm-1">
-            <button  type="button" class="btn btn-default fa fa-thumbs-up fa-2x" ng-click="addUser()"></button>
-        </div>
-        <div class="col-sm-1">
-            <button  type="button" class="btn btn-default fa fa-thumbs-down fa-2x" ng-click="removeUser()"></button>
-        </div>
-    </h4>
-</div>
-<!-- session details pannel -->
-<div  class="sessionDetailsItem  col-sm-12">
-    <h4>{{sessionTitle}} - {{sessionDate}} - {{sessionStart}}</h4>
+    <div class="sessionDetailsItem col-sm-12">
+        <h4>
+            <div class="col-sm-2">
+                <button type="button" class="btn btn-default fa fa-thumbs-up fa-2x" ng-click="addUser()"></button>
+            </div>
+            <div class="col-sm-2">
+                <button type="button" class="btn btn-default fa fa-thumbs-down fa-2x" ng-click="removeUser()"></button>
+            </div>
+        </h4>
+    </div>
+    <!-- session details pannel -->
+    <div class="sessionDetailsItem  col-sm-12">
+        <h4>{{sessionTitle}} - {{sessionDate}} - {{sessionStart}}</h4>
 
-    <button type="button" class="btn btn-default" ng-click="isCollapsedDetails = !isCollapsedDetails">Registered Students</button>
-    <ul class="list-group" uib-collapse="isCollapsedDetails">
-        <li class="list-group-item  sessionItem" ng-repeat="student in registeredStudents" >{{student}}</li>
-    </ul>
-    <button type="button" class="btn btn-default" ng-click="isCollapsedDetails = !isCollapsedDetails">Removed from Session</button>
-    <ul class="list-group" uib-collapse="isCollapsedDetails">
-        <li class="list-group-item  sessionItem" ng-repeat="student in removedStudents" >{{student}}</li>
-    </ul>
-    <button type="button" class="btn btn-default" ng-click="isCollapsedDetails = !isCollapsedDetails">Added to Session</button>
-    <ul class="list-group" uib-collapse="isCollapsedDetails">
-        <li class="list-group-item  sessionItem" ng-repeat="student in addedStudents" >{{student}}</li>
-    </ul>
-</div>
+        <button type="button" class="btn btn-default" ng-click="isCollapsedDetails = !isCollapsedDetails">Registered Students</button>
+        <ul class="list-group" uib-collapse="isCollapsedDetails">
+            <li class="list-group-item  sessionItem" ng-repeat="student in registeredStudents">{{student}}</li>
+        </ul>
+        <button type="button" class="btn btn-default" ng-click="isCollapsedDetails = !isCollapsedDetails">Removed from Session</button>
+        <ul class="list-group" uib-collapse="isCollapsedDetails">
+            <li class="list-group-item  sessionItem" ng-repeat="student in removedStudents">{{student}}</li>
+        </ul>
+        <button type="button" class="btn btn-default" ng-click="isCollapsedDetails = !isCollapsedDetails">Added to Session</button>
+        <ul class="list-group" uib-collapse="isCollapsedDetails">
+            <li class="list-group-item  sessionItem" ng-repeat="student in addedStudents">{{student}}</li>
+        </ul>
+    </div>
 </div>
